--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a {
 
 /* Hero */
 .hero {
-  background-image: url(../株式会社サクラ工業/AdobeStock_399909062.jpeg);
+  background-image: url(AdobeStock_399909062.jpeg);
   background-position: center;
   background-size: cover;
   height: 600px;
