--- a/style.css
+++ b/style.css
@@ -268,18 +268,23 @@ footer {
 }
 
 @media screen and (max-height: 480px) and (orientation: landscape) and (max-width: 896px) {
+  /* header h1 {
+    font-size: ;
+  } */
+  
   .navigator_list {
     font-size: 16px;
-    gap: 16px;
+    gap: 20px;
+    font-weight: bold;
     flex-wrap: wrap;
   }
   
   .hero_inner h2 {
-    font-size: 64px;
+    font-size: 48px;
   }
 
   .hero_inner p {
-    font-size: 32px;
+    font-size: 20px;
   }
 
   .section_title h2,
@@ -293,10 +298,6 @@ footer {
 
   footer {
     font-size: 12px;
-  }
-
-  html {
-    -wwebkit-text-size-adjust: 100%;
   }
 }
 
