--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer {
 
 @media screen and (orientation: landscape) and(max-height: 480px) {
   #contact p {
-    font-size: 16px !important;
+    font-size: 16px;
   }
 
   #contact a {
